# changelog-narrate

./: .gitignore  LICENSE  README.md  README.zh-CN.md  action.yml  pyproject.toml
.github/workflows/: release-notes.yml
agents/: SKILL.md  community_analyst.md  data_collector.md  direction_planner.md  formatter.md  pr_reviewer.md  quality_checker.md  writer.md
agents/prompts/: community.md  marketing.md  technical.md
narrate/: __init__.py  __main__.py  cli.py
references/: handoff_schemas.md  verification_scenarios.md
