[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "changelog-narrate"
version = "0.1.0"
description = "One-command release notes from git history"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
include = ["narrate*"]

[project.scripts]
narrate = "narrate.cli:main"
